fix: Connexion fonctionnelle